fix on mobile

--- a/style.css
+++ b/style.css
@@ -29,3 +29,17 @@ button {
   font-size: 16px;
   cursor: pointer;
 }
+
+@media (max-width: 768px) {
+  body {
+    padding: 5px;
+  
+  }
+
+  video{
+    width: 90%;
+  height: 50%;
+  object-fit: cover;
+  }
+}
+
